# capnproto-fun

core/: Cargo.toml  build.rs
core/src/: main.rs
core/src/discord/: mod.rs  types.rs
core/src/discord/gateway/: codec.rs  event.rs  mod.rs  protocol.rs
core/src/gateway/: event.rs  mod.rs
core/src/rpc/: mod.rs
plugins/test/: Cargo.toml  build.rs
plugins/test/src/: main.rs
schema/: protocol.capnp
